--- a/index.html
+++ b/index.html
@@ -1,277 +1,255 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-    <title>Confirmation d'Achat</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test du Microphone</title>
     <style>
         body {
+            background-color: #1e1e1e;
+            color: #e0e0e0;
             font-family: Arial, sans-serif;
-            background-color: #0f0f0f;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        h1 {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #ffcc00;
-            font-size: 36px;
-            font-weight: bold;
-            text-transform: uppercase;
-            margin-bottom: 30px;
-        }
-
-        .barre-navigation {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 20px;
+            margin: 0;
+            padding: 0;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .barre-navigation a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-            text-transform: uppercase;
-        }
-
-        .conteneur-produit {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            gap: 20px;
-            margin-bottom: 50px;
-        }
-
-        .produit-detail {
-            flex: 1 1 300px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            text-align: left;
-        }
-
-        .produit-detail img {
-            border-radius: 5px;
-            margin-bottom: 15px;
-        }
-
-        .produit-detail h2 {
-            font-size: 24px;
-            margin-bottom: 10px;
-            color: #333;
-        }
-
-        .produit-detail p {
-            color: #666;
-            margin-bottom: 15px;
-        }
-
-        .produit-detail .prix {
-            font-size: 20px;
-            color: #333;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
-
-        .buy-button {
-            background-color: #006400;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 20px;
-            transition: background-color 0.3s;
-        }
-
-        .buy-button:hover {
-            background-color: #004d00;
-        }
-
-        .security-icons {
-            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            overflow-x: hidden;
             justify-content: center;
             align-items: center;
-            margin-bottom: 20px;
         }
 
-        .security-icons img {
-            width: 30px;
-            margin-right: 10px;
-        }
-
-        .purchase-security {
-            font-size: 14px;
-            color: #666;
-            margin-top: 20px;
-        }
-
-        .overlay {
-            display: none;
+        .top-nav {
+            background-color: #000;
+            width: 100%;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
             position: fixed;
             top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 1000;
         }
 
-        .modal {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #333;
-            color: #fff;
+        .top-nav h1 {
+            margin: 0;
+            font-size: 24px;
+        }
+
+        .main-content {
+            margin-top: 80px;
             padding: 20px;
-            border-radius: 5px;
-            z-index: 1001;
-        }
-
-        .modal-content {
-            text-align: left;
-        }
-
-        .modal-content label {
-            display: block;
-            margin-bottom: 10px;
-            color: #fff;
-        }
-
-        .modal-content select,
-        .modal-content input {
+            text-align: center;
+            flex: 1;
             width: 100%;
-            padding: 5px;
-            margin-bottom: 10px;
         }
 
-        .modal-content button {
-            background-color: #006400;
+        button {
+            background-color: #3BEEE6;
             color: #fff;
-            padding: 10px 20px;
             border: none;
             border-radius: 5px;
+            padding: 15px 30px;
+            margin: 10px;
             cursor: pointer;
             font-size: 16px;
+            transition: background-color 0.3s ease;
+            display: inline-block;
+        }
+
+        button:hover {
+            background-color: #3BEEE6;
+        }
+
+        button:disabled {
+            background-color: #6c757d;
+            cursor: not-allowed;
+        }
+
+        .audio-level {
+            margin: 20px auto;
+            width: 80%;
+            max-width: 800px;
+            height: 30px;
+            background-color: #333;
+            border-radius: 5px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .audio-level .bar {
+            height: 100%;
+            width: 0;
+            background-color: #0f0;
+            transition: width 0.1s ease;
+        }
+
+        .audio-level .bar.low {
+            background-color: #ff0;
+        }
+
+        .audio-level .bar.high {
+            background-color: #f00;
+        }
+
+        audio {
             margin-top: 20px;
-            transition: background-color 0.3s;
+            width: 80%;
+            max-width: 800px;
+            background-color: #000;
         }
 
-        .modal-content button:hover {
-            background-color: #004d00;
+        nav {
+            background-color: #333;
+            width: 200px;
+            height: 80%;
+            padding: 20px 0;
+            position: absolute;
+            top: 60px;
+            left: -200px;
+            transition: left 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        #paypal-button-container {
+        nav a {
+            color: #e0e0e0;
+            text-decoration: none;
+            margin: 5px 0;
+            font-size: 18px;
+            width: 100%;
             text-align: center;
-            margin-top: 20px;
+            padding: 10px 0;
+            border-bottom: 1px solid #555;
+            box-sizing: border-box;
         }
 
-        .logo {
-            color: #006400; /* Vert foncé */
-            font-weight: bold;
-            font-size: 24px; /* Taille du texte */
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Police */
+        nav a:hover {
+            color: #007bff;
+            background-color: #444;
+        }
+
+        .top-nav .menu-button {
+            position: absolute;
+            left: 40px;
+            font-size: 32px;
+            cursor: pointer;
+            color: #e0e0e0;
+        }
+
+        footer {
+            background-color: #333;
+            color: #e0e0e0;
+            text-align: center;
+            padding: 10px 0;
+            width: 100%;
+            position: relative;
         }
     </style>
-     <script src="https://www.paypal.com/sdk/js?client-id=AYV4Q5HSkqCiE2F_vEMfDHclMQKa_3DgEwUAMCcvzGpnUvYcK8kjiUVhCW-M8RlnYedjjyl8kalr-9Xv&currency=EUR"></script>
 </head>
 <body>
-    <div class="barre-navigation">
-        <div class="logo">Pixel <span style="color: #fff;">Fegze</span></div>
-        <div>
-            <a href="https://nadir22zizi.github.io/PixelFegze-acceuille/">Accueil</a>
-            <a href="https://nadir22zizi.github.io/PixelFegze-produit/">Produits</a>
-            <a href="file:///C:/Users/acer/Desktop/gg/page%20de%20actualit%C3%A9s.html#">Actualités</a>
-            <a href="file:///C:/Users/acer/Desktop/gg/page%20de%20contacte%20.html#">Contact</a>
-            <img src="https://tse4.mm.bing.net/th?id=OIP.Q1nlJeGr_g-QXC2DXg_JoQHaHa&pid=Api&P=0&h=180" alt="Recherche" style="width: 30px; height: 30px; cursor: pointer; margin-left: 10px;" onclick="window.location.href='file:///C:/Users/acer/Desktop/gg/page%20de%20rehcerche.html';">
+    <nav id="sidebar">
+        <a href="#">Accueil</a>
+        <a href="#">Enregistrement d'ecran</a>
+        <a href="#">Tutoriels</a>
+        <a href="#">Aide</a>
+        <a href="#">Paramètres</a>
+    </nav>
+
+    <div class="top-nav" id="top-nav">
+        <span class="menu-button" onclick="toggleSidebar()">&#9776;</span>
+        <h1>Test du Microphone</h1>
+    </div>
+
+    <div class="main-content">
+        <button id="start-test">Démarrer le Test</button>
+        <button id="stop-test" disabled>Arrêter le Test</button>
+        <div class="audio-level">
+            <div class="bar"></div>
         </div>
     </div>
 
-    <h1 style="color: #006400;">DÉCOUVREZ NOTRE PRODUIT PHARE</h1>
-
-    <div class="conteneur-produit">
-        <div class="produit-detail">
-            <img src="https://tse2.mm.bing.net/th?id=OIP.cgLlamFUGSC840gQx2FxDAHaEr&pid=Api&P=0&h=180" alt="clavier Razer Huntsman Mini" title="clavier Razer Huntsman Mini">
-            <h2>clavier Razer Huntsman Mini</h2>
-            <p class="product-description">Le clavier Razer Huntsman Mini est bien plus qu'un simple clavier. C'est un chef-d'œuvre d'ingénierie conçu pour les joueurs les plus exigeants. Doté de switches opto-mécaniques Razer, chaque pression de touche est instantanée et précise, vous offrant un avantage compétitif crucial dans chaque jeu. Sa conception compacte et portable en fait le compagnon idéal pour les tournois et les déplacements, tandis que ses touches en PBT à double injection assurent une durabilité à toute épreuve. Avec le Razer Huntsman Mini, l'excellence est à portée de main.</p>
-            <p class="prix">Prix du Produit : 149.99 €</p>
-            <button class="buy-button" onclick="showConfirmationMessage()">Ajouter au Panier</button>
-            <div class="security-icons">
-                <img src="https://via.placeholder.com/30" alt="Sécurité des paiements">
-                <span>Paiement sécurisé</span>
-            </div>
-            <p class="purchase-security">Achetez en toute sécurité grâce à notre système de paiement sécurisé. Nous protégeons vos informations personnelles.</p>
-        </div>
-    </div>
-
-    <div class="overlay"></div>
-    <div class="modal">
-        <div class="modal-content">
-            <button class="close-button" onclick="closeModal()">X</button>
-            <label for="quantity">Quantité :</label>
-            <input type="number" id="quantity" name="quantity" value="1" min="1"><br><br>
-            <label for="payment-method">Méthode de paiement :</label>
-            <select id="payment-method" name="payment-method">
-                <option value="carte-credit">Carte de crédit</option>
-                <option value="paypal">PayPal</option>
-                <option value="virement">Virement bancaire</option>
-                <option value="livraison">Paiement à la livraison</option>
-            </select><br><br>
-            <button onclick="processPayment()">Confirmer le paiement</button>
-        </div>
-    </div>
-    <div id="paypal-button-container"></div>
+    <footer>
+        <p>&copy; 2024 Test du Microphone | Tous droits réservés.</p>
+    </footer>
 
     <script>
-        function closeModal() {
-            const overlay = document.querySelector('.overlay');
-            const modal = document.querySelector('.modal');
-            overlay.style.display = 'none';
-            modal.style.display = 'none';
-        }
-
-        function showConfirmationMessage() {
-            const overlay = document.querySelector('.overlay');
-            const modal = document.querySelector('.modal');
-            overlay.style.display = 'block';
-            modal.style.display = 'block';
-        }
-
-        function processPayment() {
-            const paymentMethod = document.getElementById('payment-method').value;
-            if (paymentMethod === 'paypal') {
-                paypal.Buttons({
-                    createOrder: function(data, actions) {
-                        return actions.order.create({
-                            purchase_units: [{
-                                amount: {
-                                    value: '149.99',
-                                    currency_code: 'EUR'
-                                }
-                            }]
-                        });
-                    },
-                    onApprove: function(data, actions) {
-                        return actions.order.capture().then(function(details) {
-                            alert('Paiement confirmé avec PayPal !');
-                        });
-                    }
-                }).render('#paypal-button-container');
-                const overlay = document.querySelector('.overlay');
-                overlay.style.display = 'block';
+        function toggleSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            const mainContent = document.querySelector('.main-content');
+            if (sidebar.style.left === '-200px') {
+                sidebar.style.left = '0';
+                mainContent.style.marginLeft = '220px';
             } else {
-                alert('Méthode de paiement non prise en charge pour l\'exemple.');
+                sidebar.style.left = '-200px';
+                mainContent.style.marginLeft = '0';
             }
         }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            let mediaStream;
+            let audioContext;
+            let source;
+            let analyzer;
+
+            const audioPlayback = document.getElementById('audio-playback');
+            const audioLevelBar = document.querySelector('.audio-level .bar');
+
+            const startButton = document.getElementById('start-test');
+            const stopButton = document.getElementById('stop-test');
+
+            startButton.addEventListener('click', async () => {
+                try {
+                    mediaStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+                    audioContext = new (window.AudioContext || window.webkitAudioContext)();
+                    source = audioContext.createMediaStreamSource(mediaStream);
+
+                    analyzer = audioContext.createAnalyser();
+                    analyzer.fftSize = 256;
+                    const bufferLength = analyzer.frequencyBinCount;
+                    const dataArray = new Uint8Array(bufferLength);
+
+                    source.connect(analyzer);
+                    analyzer.connect(audioContext.destination);
+
+                    const updateAudioLevel = () => {
+                        analyzer.getByteFrequencyData(dataArray);
+                        const average = dataArray.reduce((a, b) => a + b, 0) / bufferLength;
+                        const percentage = Math.min((average / 256) * 100, 100);
+                        audioLevelBar.style.width = `${percentage}%`;
+
+                        if (average < 64) {
+                            audioLevelBar.className = 'bar low';
+                        } else if (average < 128) {
+                            audioLevelBar.className = 'bar';
+                        } else {
+                            audioLevelBar.className = 'bar high';
+                        }
+
+                        requestAnimationFrame(updateAudioLevel);
+                    };
+
+                    updateAudioLevel();
+
+                    startButton.disabled = true;
+                    stopButton.disabled = false;
+                } catch (err) {
+                    console.error('Erreur lors de la capture audio :', err);
+                }
+            });
+
+            stopButton.addEventListener('click', () => {
+                if (source && analyzer) {
+                    source.disconnect();
+                    analyzer.disconnect();
+                    mediaStream.getTracks().forEach(track => track.stop());
+                    audioContext.close();
+                    startButton.disabled = false;
+                    stopButton.disabled = true;
+                }
+            });
+        });
     </script>
 </body>
 </html>
